7131791: G1: Asserts in nightly testing due to 6976060

Create a handle and fake an object to make sure that we don't loose the memory we just allocated

Reviewed-by: tonyp, stefank